--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ body {
   bootstrap styling overrides our styling*/
   color: #fff !important;
   /*color of text*/
-  font-family: 'Centra', sans-serif !important;
+  font-family: 'Roboto', sans-serif !important;
 }
 
 h1,
@@ -239,6 +239,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-color: transparent;
 }
 
+.nav-logo {
+  padding-right: 50px !important;
+}
+
 /************ Banner Css ************/
 .banner {
   margin-top: 0;
@@ -271,11 +275,16 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .banner p {
-  color: #B8B8B8;
+  color: #ffffff;
+  padding: 15px;
+  padding-right: 10px !important;
+  background-color: rgba(86, 86, 86, 0.447);
+  border-radius: 25px;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
   width: 96%;
+  align-content: flex-start;
 }
 
 .banner button {
@@ -284,7 +293,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border: none;
   font-weight: 700;
   font-size: 20px;
-  margin-top: 60px;
+  margin-top: 35px;
   letter-spacing: 0.8px;
   display: flex;
   align-items: center;
@@ -301,7 +310,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin-left: 25px;
 }
 
-.banner img {
+.banner-image {
+  align-items: left;
+  margin-top: 19px;
+}
+
+.banner-anim {
   animation: updown 3s linear infinite;
 }
 
@@ -377,10 +391,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .background-image-left {
-  top: 28%;
   position: absolute;
   bottom: 0;
-  width: 40%;
   z-index: -4;
 }
 
@@ -479,6 +491,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-radius: 0 55px 55px 0;
 }
 
+.proj-location {
+  color: #B8B8B8;
+  font-size: 17px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  width: 56%;
+}
+
 .proj-skills {
   color: #B8B8B8;
   font-size: 18px;
@@ -486,6 +506,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   line-height: 1.5em;
   font-style: italic;
   width: 56%;
+  margin-bottom: 10px;
 }
 
 .proj-desc {
@@ -498,20 +519,87 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 .proj-imgbx {
   position: relative;
-  border-radius: 30px;
   overflow: hidden;
-  margin-bottom: 24px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.proj-imgbx::before {
-  content: "";
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  opacity: 0.85;
-  position: absolute;
-  width: 100%;
-  height: 0;
-  transition: 0.4s ease-in-out;
+.carousel-holder {
+  .container {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    height: 100vh !important;
+    margin-top: 15px !important;
+    /* Set the height of the container to occupy the full viewport height */
+  }
 }
+
+.custom-modal {
+  width: 70vw !important;
+  height: 70vh !important;
+  margin: auto;
+}
+
+
+.popup-card {
+  max-width: 90%;
+  min-width: 60%;
+  overflow-y: auto;
+  position: relative;
+  background-color: #fff;
+}
+
+.popup-card img {
+  max-width: 100%;
+  height: auto;
+}
+
+
+
+
+
+
+.carousel-indicators {
+  display: none !important;
+  /* Hide the indicators */
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  /* Adjust the positioning if needed */
+  top: auto;
+  bottom: 0;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  /* Remove the default icon if needed */
+  background-image: none;
+  /* Add your custom icon or styling here */
+}
+
+
+.proj-imgbx img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.image-container {
+  height: 100%;
+}
+
+.layout-box {
+  background-color: rgba(61, 61, 61, 0.7);
+  padding: 30px;
+  border-radius: 15px;
+  margin-bottom: 15px;
+
+}
+
 
 .proj-imgbx:hover::before {
   height: 100%;
@@ -563,6 +651,18 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   z-index: -4;
 }
 
+.full-width-description {
+  color: #B8B8B8;
+  font-size: 16px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  margin: 14px auto 30px auto;
+  width: 56%;
+  width: 100%;
+  /* Ensures the description takes up the full width */
+  /* Add any other styles as per your requirement */
+}
+
 /************ Youtube Css ************/
 
 .video-responsive {
@@ -580,10 +680,97 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: absolute;
 }
 
+/************ Contact Css ************/
+.contact {
+  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+  padding: 60px 0 200px 0;
+}
+
+.contact img {
+  width: 92%;
+}
+
+.contact h2 {
+  font-size: 45px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.contact form input,
+.contact form textarea {
+  width: 100%;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  color: #fff;
+  margin: 0 0 8px 0;
+  padding: 18px 26px;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  transition: 0.3s ease-in-out;
+}
+
+.contact form input:focus,
+.contact form textarea:focus {
+  background: rgba(255, 255, 255, 1);
+  color: #121212;
+}
+
+.contact form input::placeholder,
+.contact form textarea::placeholder {
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+}
+
+.contact form input:focus::placeholder,
+.contact form textarea:focus::placeholder {
+  color: #121212;
+  opacity: 0.8;
+}
+
+.contact form button {
+  font-weight: 700;
+  color: #000;
+  background-color: #fff;
+  padding: 14px 48px;
+  font-size: 18px;
+  margin-top: 25px;
+  border-radius: 0;
+  position: relative;
+  transition: 0.3s ease-in-out;
+}
+
+.contact form button span {
+  z-index: 1;
+  position: relative;
+}
+
+.contact form button:hover {
+  color: #fff;
+}
+
+.contact form button::before {
+  content: "";
+  background: #121212;
+  width: 0;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  transition: 0.3s ease-in-out;
+}
+
+.contact form button:hover::before {
+  width: 100%;
+}
+
 /************ Footer Css ************/
 .footer {
   padding: 0 0 50px 0;
-  background-image: url('./assets/img/footer-bg.png');
+  background-image: url('./assets/img/footer-back.png');
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
