--- a/src/App.css
+++ b/src/App.css
@@ -403,6 +403,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background-color: black;
 }
 
+.project-icon {
+  display: inline-block;
+}
+
 .project h2 {
   font-size: 45px;
   font-weight: 700;
